[package]
name = "noble_prost_build"
version = "0.1.0"
authors = ["Zaki Manian <zaki@iqlusion.io>"]
edition = "2021"


[dependencies]
prost = { workspace = true }
tonic = { workspace = true }
prost-build = { workspace = true }
tempdir = { workspace = true }
walkdir = { workspace = true }
tonic-build = { workspace = true }
regex = { workspace = true }
